# dora-superset

./: .env.example  .gitignore  Makefile  README.md  authen_calendar.py  github_loader.py  google_calendar.py  jira.py  main.py  pyproject.toml  simulate_test.sh
.github/workflows/: cicd.yaml  schedule-cron.yaml
model/: BaseModel.py  CreateTables.py
model/calendar/: Meeting.py
model/jira/: Card.py  CreateTables.py  Issue.py  Sprint.py
pipeline/: ETLCalendar.py  ETLJira.py
pipeline/lib/: JiraSprintReport.py  LeadTime.py
