[tool.poetry]
name = "dora-superset"
version = "0.1.0"
description = "Sample project to show how to get started with monitoring DORA metrics"
authors = ["Pee Tankulrat", "Kanin Kearpimy"]
readme = "README.md"
packages = [{include = "dora_superset"}]

[tool.poetry.dependencies]
python = "^3.9"
gcsa = "^2.1.0"
jira = "^3.5.0"
pygithub = "^1.58.2"
mysqlclient = "^2.1.1"
peewee = "^3.16.2"
python-dotenv = "^1.0.0"
pytz = "^2023.3"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
